separate jsonnet setup into jsonnet-env.sh

--- a/.github/workflows/jsonnet.yml
+++ b/.github/workflows/jsonnet.yml
@@ -46,6 +46,9 @@ jobs:
           go-version-file: .go-version
 
       - name: Set up Jsonnet
+        run: ./jsonnet-env.sh
+
+      - name: Set up environment
         run: ./env.sh
 
       - name: Generate
