--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -59,6 +59,9 @@ jobs:
         run: make bpf
 
       - name: Set up Jsonnet
+        run: ./jsonnet-env.sh
+
+      - name: Set up environment
         run: ./env.sh
 
       - name: Build
