--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -79,6 +79,9 @@ jobs:
         run: git submodule init && git submodule update
 
       - name: Set up Jsonnet
+        run: ./jsonnet-env.sh
+
+      - name: Set up environment
         run: ./env.sh
 
       - name: Build
