--- a/.github/workflows/jsonnet.yml
+++ b/.github/workflows/jsonnet.yml
@@ -46,7 +46,7 @@ jobs:
           go-version-file: .go-version
 
       - name: Set up Jsonnet
-        run: ./jsonnet-env.sh
+        run: ./env-jsonnet.sh
 
       - name: Set up environment
         run: ./env.sh
