--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -79,7 +79,7 @@ jobs:
         run: git submodule init && git submodule update
 
       - name: Set up Jsonnet
-        run: ./jsonnet-env.sh
+        run: ./env-jsonnet.sh
 
       - name: Set up environment
         run: ./env.sh
