--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -59,7 +59,7 @@ jobs:
         run: make bpf
 
       - name: Set up Jsonnet
-        run: ./jsonnet-env.sh
+        run: ./env-jsonnet.sh
 
       - name: Set up environment
         run: ./env.sh
