--- a/.github/workflows/jsonnet.yml
+++ b/.github/workflows/jsonnet.yml
@@ -28,7 +28,8 @@ jobs:
               ".github/workflows/jsonnet.yml",
               ".go-version",
               "Makefile",
-              "deploy/**"
+              "deploy/**",
+              "deploy/lib/parca-agent/parca-agent.libsonnet"
             ]
           skip_after_successful_duplicate: false
 
