--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -246,7 +246,8 @@ jobs:
           go-version-file: .go-version
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        run: |
+          brew install docker-machine docker
 
       - name: Set up jsonnet
         run: ./env-jsonnet.sh
