add upterm support

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -13,13 +13,6 @@ env:
   RUSTDOCFLAGS: --deny warnings
 
 jobs:
-  set-upterm:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: setup upterm sessionn
-        uses: lhotari/action-upterm@v1
-
   skip-check:
     name: Skip check
     continue-on-error: true
@@ -258,6 +251,9 @@ jobs:
 
       - name: Set up jsonnet
         run: ./env-jsonnet.sh
+
+      - name: Setup upterm sessionn
+        uses: lhotari/action-upterm@v1
 
       - name: start minikube
         id: minikube
