--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -11,13 +11,6 @@ env:
   GORELEASER_VERSION: v1.11.5
 
 jobs:
-  set-upterm:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: setup upterm sessionn
-        uses: lhotari/action-upterm@v1
-
   skip-check:
     name: Skip check
     continue-on-error: true
@@ -237,6 +230,9 @@ jobs:
 
       - name: Set up jsonnet
         run: ./env-jsonnet.sh
+
+      - name: Setup upterm sessionn
+        uses: lhotari/action-upterm@v1
 
       - name: start minikube
         id: minikube
