--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -264,6 +264,7 @@ jobs:
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
+        if: ${{ always() }}
         with:
           name: kubectl e2e dump
           path: |
