--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -255,12 +255,12 @@ jobs:
       - name: Set up kubectl
         run: brew install kubectl
 
-      - name: Setup upterm sessionn
-        uses: lhotari/action-upterm@v1
-
       - name: Run e2e tests
         run: make actions-e2e
 
+      - name: Setup upterm sessionn
+        #run: touch continue
+        uses: lhotari/action-upterm@v1
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
