--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -258,6 +258,9 @@ jobs:
       - name: Run e2e tests
         run: make actions-e2e
 
+      - name: Upload kubectl logs
+        run: ./e2e/e2e-dump.sh
+
       - name: Setup upterm sessionn
         #run: touch continue
         uses: lhotari/action-upterm@v1
@@ -268,5 +271,5 @@ jobs:
         with:
           name: kubectl e2e dump
           path: |
-            tmp/e2e-dump
+            ./tmp/e2e-dump
 
