--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -220,7 +220,7 @@ jobs:
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3.0.2
 
       - name: Set up Go
-        uses: actions/setup-go@84cbf8094393cdc5fe1fe1671ff2647332956b1a # tag=v3.2.1
+        uses: actions/setup-go@268d8c0ca0432bb2cf416faae41297df9d262d7f # tag=v3.3.0
         with:
           go-version-file: .go-version
 
@@ -240,8 +240,7 @@ jobs:
       - name: Upload kubectl logs
         run: ./e2e/e2e-dump.sh
 
-      - name: Setup upterm sessionn
-        #run: touch continue
+      - name: Setup upterm session
         uses: lhotari/action-upterm@v1
 
       - name: Archive production artifacts
